--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ function update_tiny(i) {
         <li><a href="https://consensys.net/academy/bootcamp/" target="_blank">ConsenSys academy</a></li> 
         <li><a href="https://www.chainshot.com/" target="_blank">ChainShot</a></li>
         <li><a href="https://www.bloomtech.com/courses/web3" target="_blank">BloomTech</a></li>
-        <li><a href="https://www.coursera.org/specializations/blockchain" target="_blank">Coursera</a> <span class="badge badge-warning">🤓 advanced</span></li>
+        <li><a href="https://www.coursera.org/specializations/blockchain" target="_blank">Coursera</a> <span class="badge badge-warning"> advanced</span></li>
       </ul>
       <p><a name="official"></a></p>
       <h3>Official resources</h3>
@@ -530,11 +530,11 @@ function update_tiny(i) {
           <h3>Read</h3>
              <ul>
                <li><a href="https://vitalik.ca/" target="_blank">Vitaliks blog</a></li>
-               <li><a href="https://archive.balajis.com/" target="_blank">Balaji's blog</a> <span class="badge badge-dark">🤓 advanced</span></li>                  
+               <li><a href="https://archive.balajis.com/" target="_blank">Balaji's blog</a> <span class="badge badge-warning"> advanced</span></li>                  
                <li><a href="https://blog.openzeppelin.com/" target="_blank">OpenZeppelin blog</a></li> 
-               <li><a href="https://unenumerated.blogspot.com" target="_blank">Nick Szabo's blog</a> <span class="badge badge-dark">🤓 advanced</span></li>                  
+               <li><a href="https://unenumerated.blogspot.com" target="_blank">Nick Szabo's blog</a> <span class="badge badge-warning"> advanced</span></li>                  
                <li><a href="https://cdixon.org/" target="_blank">Chris Dixon's blog</a> </li>                  
-               <li><a href="https://ethresear.ch/" target="_blank">Eth Research</a> <span class="badge badge-dark">🤓 advanced</span></li>
+               <li><a href="https://ethresear.ch/" target="_blank">Eth Research</a> <span class="badge badge-warning"> advanced</span></li>
               </ul>
             <p><a name="community"></a></p>
             <h3>Community</h3>
