--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ function update_tiny(i) {
   </div>
 </div>
 
-<div >
+<div style="width:90%;">
   <div class="container main" style="margin-top:30px; padding-bottom:20px;">
   <div class="row">
     <div class="col-sm-6 md-6">
