--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <h ead>
+  <head>
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -415,58 +415,22 @@ function update_tiny(i) {
   
 	  
  
-	  
-
-	  
-	  
-	  
-<style>
-  .hero { max-height: 200px;
-  padding-top: 0px;
-  margin-top: 0px;
-
-  }
-  .invert{
-    color: #fff;
-  background-color: #000;
-  }
-  .img1 {
-		padding: 10px 10px 50px 10px;
-  }
-  *{
-  font-family: "Overpass mono", monospace;
-  }
-  /*h2 {
-	color: #497699;
-  }*/
-  
- 
- .bottom{
- background-color: black;
- color: white;
- overflow: hidden;
- }
-  .bottom a{
- color: #ba26ce;;
- }
-
-  </style>
-</h>
+</head>
 <body>
 
-<div class="heading-container">
+<div class="heading-container" style="border: 2px solid red;">
   <div class="row">
 	
     <div class="col-sm-12 col-md-12 logo-container">
-		<img class="logo" src="web3logo2.png">
+		<img class="logo" src="web3logo3.png" >
 	<div class="tagline" style="color:white; font-size:18px;">A collection of resources for hackers <span style="font-size:25px;">🧙‍♂️</span></div>
 
     </div>
   </div>
 </div>
 
-<div style="width:90%;">
-  <div class="container main" style="margin-top:30px; padding-bottom:20px;">
+<div>
+  <div class="container main" style="border: 2px solid red; margin-top:30px; padding-bottom:20px;">
   <div class="row">
     <div class="col-sm-6 md-6">
 	     <h2>🎓 LEARN</h2>
@@ -662,7 +626,7 @@ function update_tiny(i) {
   </div>
 </div>
 
-<div class="jumbotron text-center bottom" style="margin-bottom:0px;">
+<div class="jumbotron text-center bottom" style="border: 2px solid red; margin-bottom:0px;">
   <p>Made with ❤ by <a href="https://www.twitter.com/fryingneurons">@fryingneurons</a>. Contribute on <a href="https://github.com/nickberns/howtoweb3.guide">github</a>. gm!</p>
   Wand by <a href="https://springhole.net">springhole</a>. Sparkles by <a href="https://gist.github.com/averykhoo/8057a0324be445bd7eea32c89379eb76">averykhoo</a>.  Galaxy by <a href="https://codepen.io/sharmad/pen/fJdnt">sharmad</a>.
 </div>
