--- a/index.html
+++ b/index.html
@@ -4,21 +4,31 @@
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!---SEO-->
   <title>The Ultimate List of Web3 Resources | howtoweb3.guide</title>
-
   <meta name="description" content="A collection of resources to get you started programming NFT's, Dapps & all things Web3." />
+  <meta name="Robots" content="index,follow" />
 
-  <meta property="og:image" content="IMAGE URL">
+  <!--Open graph-->
+  <meta property="og:url" content="https://www.howtoweb3.guide" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="How to Web3" />
+  <meta property="og:description" content="A collection of resources to get you started programming NFT's, Dapps & all things Web3." />
+  <meta property="og:image" content="web3banner2.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">  
 
-  <meta name="twitter:title" content="A collection of resources to get you started programming NFT's, Dapps & all things Web3." />
+  <!--Twitter card-->
+  <meta name="twitter:card" content="summary_large_image"><!-- required -->
+  <meta name="twitter:site" content="@fryingneurons"><!-- required -->
+  <meta name="twitter:creator" content="@fryingneurons"><!-- optional -->
+  <meta name="twitter:title" content="How to Web3"><!-- required -->
+  <meta name="twitter:description" content="A collection of resources to get you started programming NFT's, Dapps & all things Web3."><!-- optional -->
+  <meta name="twitter:image" content="web3banner2.jpg"><!-- optional -->
+  <meta name="twitter:image:alt" content="banner"><!-- optional -->
 
-  <meta name="Robots" content="index,follow" />
-	  	  
-
-
+<!--GA-->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-217805567-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -26,9 +36,8 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-217805567-1');
-
-
 </script>
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="./index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -422,7 +431,7 @@ function update_tiny(i) {
   <div class="row">
 	
     <div class="col-sm-12 col-md-12 logo-container">
-		<img class="logo" src="web3logo3.png" >
+		<img class="logo" src="web3logo3.png" alt="logo">
 	<div class="tagline" style="color:white; font-size:18px;">A collection of resources for hackers <span style="font-size:25px;">🧙‍♂️</span></div>
 
     </div>
@@ -626,7 +635,7 @@ function update_tiny(i) {
   </div>
 </div>
 
-<div class="jumbotron text-center bottom" style="border: 2px solid red; margin-bottom:0px;">
+<div class="col-sm-12 col-md-12 text-center bottom" style="border: 2px solid red;">
   <p>Made with ❤ by <a href="https://www.twitter.com/fryingneurons">@fryingneurons</a>. Contribute on <a href="https://github.com/nickberns/howtoweb3.guide">github</a>. gm!</p>
   Wand by <a href="https://springhole.net">springhole</a>. Sparkles by <a href="https://gist.github.com/averykhoo/8057a0324be445bd7eea32c89379eb76">averykhoo</a>.  Galaxy by <a href="https://codepen.io/sharmad/pen/fJdnt">sharmad</a>.
 </div>
