--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="twitter:site" content="@fryingneurons"><!-- required -->
   <meta name="twitter:creator" content="@fryingneurons"><!-- optional -->
   <meta name="twitter:title" content="How to Web3"><!-- required -->
-  <meta name="twitter:description" content="A collection of resources to get you started programming NFT's, Dapps & all things Web3."><!-- optional -->
+  <meta name="twitter:description" content="A collection of resources to get you started coding on Web3."><!-- optional -->
   <meta name="twitter:image" content="web3banner2.jpg"><!-- optional -->
   <meta name="twitter:image:alt" content="banner"><!-- optional -->
 
@@ -427,7 +427,7 @@ function update_tiny(i) {
 </head>
 <body>
 
-<div class="heading-container" style="border: 2px solid red;">
+<div class="heading-container">
   <div class="row">
 	
     <div class="col-sm-12 col-md-12 logo-container">
@@ -439,7 +439,7 @@ function update_tiny(i) {
 </div>
 
 <div>
-  <div class="container main" style="border: 2px solid red; margin-top:30px; padding-bottom:20px;">
+  <div class="container main" style="margin-top:20px; padding-bottom:20px;">
   <div class="row">
     <div class="col-sm-6 md-6">
 	     <h2>🎓 LEARN</h2>
@@ -635,7 +635,7 @@ function update_tiny(i) {
   </div>
 </div>
 
-<div class="col-sm-12 col-md-12 text-center bottom" style="border: 2px solid red;">
+<div class="col-sm-12 col-md-12 text-center bottom">
   <p>Made with ❤ by <a href="https://www.twitter.com/fryingneurons">@fryingneurons</a>. Contribute on <a href="https://github.com/nickberns/howtoweb3.guide">github</a>. gm!</p>
   Wand by <a href="https://springhole.net">springhole</a>. Sparkles by <a href="https://gist.github.com/averykhoo/8057a0324be445bd7eea32c89379eb76">averykhoo</a>.  Galaxy by <a href="https://codepen.io/sharmad/pen/fJdnt">sharmad</a>.
 </div>
