--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="Robots" content="index,follow" />
 
   <!--Open graph-->
-  <meta property="og:url" content="https://www.howtoweb3.guide" />
+  <meta property="og:url" content="https://www.howtoweb3.guide/web3banner2.png" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="How to Web3" />
   <meta property="og:description" content="A collection of resources to get you started programming NFT's, Dapps & all things Web3." />
@@ -25,7 +25,7 @@
   <meta name="twitter:creator" content="@fryingneurons"><!-- optional -->
   <meta name="twitter:title" content="How to Web3"><!-- required -->
   <meta name="twitter:description" content="A collection of resources to get you started coding on Web3."><!-- optional -->
-  <meta name="twitter:image" content="web3banner2.jpg"><!-- optional -->
+  <meta name="twitter:image" content="https://www.howtoweb3.guide/web3banner2.png"><!-- optional -->
   <meta name="twitter:image:alt" content="banner"><!-- optional -->
 
 <!--GA-->
