--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ function update_tiny(i) {
 </div>
 
 <div>
-  <div class="container main" style="margin-top:20px; padding-bottom:20px;">
+  <div class="container main" style="padding-bottom:20px;">
   <div class="row">
     <div class="col-sm-6 md-6">
 	     <h2>🎓 LEARN</h2>
