--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>The Ultimate List of Web3 Resources | howtoweb3.guide</title>
   <meta name="description" content="A collection of resources to get you started programming NFT's, Dapps & all things Web3." />
   <meta name="Robots" content="index,follow" />
+  <link rel="icon" href="favicon-16x16.png" type="image/png" sizes="16x16"> 
 
   <!--Open graph-->
   <meta property="og:url" content="https://www.howtoweb3.guide/web3banner2.png" />
