--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@ function update_tiny(i) {
             <h3>Community</h3>
               <ul>
                 <li><a href="https://discord.com/invite/vPmqZqgpsS" target="_blank">Buildspace discord</a></li>
+                <li><a href="https://discord.com/invite/vyc9zsFZRe" target="_blank">LearnWeb3 DAO</a></li>
                 <li><a href="https://www.developerdao.com/" target="_blank">Developer DAO</a></li> 
                 <li><a href="https://www.reddit.com/r/ethdev/" target="_blank">r/ethdev</a></li> 
                 <li><a href="https://www.reddit.com/r/solidity/" target="_blank">r/solidity</a></li> 
