--- a/index.html
+++ b/index.html
@@ -29,15 +29,12 @@
   <meta name="twitter:image" content="https://www.howtoweb3.guide/web3banner2.png"><!-- optional -->
   <meta name="twitter:image:alt" content="banner"><!-- optional -->
 
-<!--GA-->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-217805567-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KF95NJM');</script>
 
-  gtag('config', 'UA-217805567-1');
-</script>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="./index.css">
@@ -421,12 +418,12 @@ function update_tiny(i) {
 }
 
 	
-</script>
-  
-	  
+</script>  
  
 </head>
 <body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KF95NJM"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="heading-container">
   <div class="row">
