--- a/index.html
+++ b/index.html
@@ -584,6 +584,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <li><a href="https://blog.replit.com/solidity Replit" target="_blank">Replit template</a></li> 
       <li><a href="https://github.com/scaffold-eth/scaffold-eth" target="_blank">Scaffold Eth</a></li> 
       <li><a href="https://github.com/paulrberg/create-eth-app" target="_blank">Create Eth app</a></li> 
+      <li><a href="https://thirdweb.com/portal" target="_blank">Thirdweb</a></li> 
     </ul>
 	  <p><a name="testnets"></a></p>
 	<h3>Testnets</h3>
