added OpenZeppelin comm

--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li><a href="https://discord.com/invite/vPmqZqgpsS" target="_blank">Buildspace discord</a></li>
                 <li><a href="https://discord.com/invite/vyc9zsFZRe" target="_blank">LearnWeb3 DAO</a></li>
                 <li><a href="https://www.developerdao.com/" target="_blank">Developer DAO</a></li> 
+                <li><a href="https://zpl.in/discord/" target="_blank">OpenZeppelin discord</a></li> 
                 <li><a href="https://www.reddit.com/r/ethdev/" target="_blank">r/ethdev</a></li> 
                 <li><a href="https://www.reddit.com/r/solidity/" target="_blank">r/solidity</a></li> 
              </ul>
