Added mirror, snapshot and gitcoin

--- a/index.html
+++ b/index.html
@@ -531,6 +531,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li><a href="https://www.binance.com/?ref=10196621/" target="_blank">Binance</a> (btc to alt)</li>
         <li><a href="https://uniswap.org/" target="_blank">Uniswap</a> (DEX)</li>
     </ul> 
+    <p><a name="projects"></a></p> 
+    <h3>Projects</h3>
+    <ul>
+        <li><a href="https://mirror.xyz/" target="_blank">Mirror</a> (blogging & funding)</li>
+        <li><a href="https://snapshot.org/" target="_blank">Snapshot</a> (voting platform)</li>
+        <li><a href="https://gitcoin.co/" target="_blank">Gitcoin</a> (grants & dev funding) <span class="badge badge-secondary">✨ official </span></li>
+    </ul> 	    
  </div>
  <div class="col-sm-6 md-6">
   <h2>🛠️ BUILD</h2>
