--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <ul>
         <li><a href="https://mirror.xyz/" target="_blank">Mirror</a> (blogging & funding)</li>
         <li><a href="https://snapshot.org/" target="_blank">Snapshot</a> (voting platform)</li>
-        <li><a href="https://gitcoin.co/" target="_blank">Gitcoin</a> (grants & dev funding) <span class="badge badge-secondary">✨ official </span></li>
+        <li><a href="https://gitcoin.co/" target="_blank">Gitcoin</a> (grants) <span class="badge badge-secondary">✨ official </span></li>
     </ul> 	    
  </div>
  <div class="col-sm-6 md-6">
