--- a/index.html
+++ b/index.html
@@ -645,7 +645,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="col-sm-12 col-md-12 text-center bottom">
   <p>Made with ❤ by <a href="https://www.twitter.com/fryingneurons">@fryingneurons</a>. Contribute on <a href="https://github.com/nickberns/howtoweb3.guide">github</a>. gm!</p>
-  <p>Donate <strong>BTC:</strong> 15dfeUMLxutHbnJAgWFNNGByp4vKUMeHWn | <strong>ETH:</strong> 0xF2596d0388874e2638c671884b2c7073B41D4361</p>
+  <p>Donate <strong>BTC:</strong> 15dfeUMLxutHbnJAgWFNNGByp4vKUMeHWn</p>
+  <p>Donate <strong>ETH:</strong> 0xF2596d0388874e2638c671884b2c7073B41D4361</p>
   Wand by <a href="https://springhole.net">springhole</a>. Sparkles by <a href="https://gist.github.com/averykhoo/8057a0324be445bd7eea32c89379eb76">averykhoo</a>.  Galaxy by <a href="https://codepen.io/sharmad/pen/fJdnt">sharmad</a>.
 </div>
 </div>
