--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h3>Exchanges</h3>
     <ul>
         <li><a href="https://localbitcoins.com/?ch=rray" target="_blank">Localbitcoins</a> (peer-to-peer)</li>
-        <li><a href="https://www.binance.com/?ref=10196621/" target="_blank">Binance</a> (btc to alt)</li>
+        <li><a href="https://accounts.binance.com/en/register?ref=10196621" target="_blank">Binance</a> (btc to alt)</li>
         <li><a href="https://uniswap.org/" target="_blank">Uniswap</a> (DEX)</li>
     </ul> 
     <p><a name="projects"></a></p> 
@@ -537,6 +537,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li><a href="https://mirror.xyz/" target="_blank">Mirror</a> (blogging & funding)</li>
         <li><a href="https://snapshot.org/" target="_blank">Snapshot</a> (voting platform)</li>
         <li><a href="https://gitcoin.co/" target="_blank">Gitcoin</a> (grants) <span class="badge badge-secondary">✨ official </span></li>
+        <li><a href="https://www.freeflow.dev/" target="_blank">Freeflow</a> (developer marketplace)</li>	
+	<li><a href="https://bitsgap.com/?ref=3a805c22" target="_blank">Bitsgap</a> (crypto bot)</li>	
     </ul> 	    
  </div>
  <div class="col-sm-6 md-6">
