add `create-web3-dapp` to boilerplates
[create-web3-dapp](https://createweb3dapp.alchemy.com/) is a fully-open-source NPX package for creating web3 dapps in under 5 mins using the CLI. 

Added it to the boilerplates section as it will be a great addition here!

--- a/index.html
+++ b/index.html
@@ -588,6 +588,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p><a name="boilerplates"></a></p>
    <h3>Boilerplates</h3>
     <ul>
+      <li><a href="https://github.com/alchemyplatform/create-web3-dapp" target="_blank">Create Web3 Dapp</a></li> 
       <li><a href="https://trufflesuite.com/boxes/" data-toggle="tooltip" title="by Truffle" target="_blank">Boxes</a> </li>
       <li><a href="https://github.com/truffle-box/drizzle-box" data-toggle="tooltip" title="by Truffle" target="_blank">Drizzle</a> </li> 
       <li><a href="https://github.com/NoahZinsmeister/web3-webpacked" target="_blank">Webpacked</a></li>
